# coordination-smartcontracts

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: coordination-game.yml  program.yml  shillbot-program.yml
circuits/bool_range/: export_vk.ts  package-lock.json  setup.sh  verifying_key.rs
crates/shared/src/: constants.rs
programs/coordination/: Cargo.toml  build.rs
programs/coordination-game/: .deploy-trigger  Cargo.toml
programs/coordination-game/src/: errors.rs  events.rs  lib.rs  payoff.rs
programs/coordination-game/src/instructions/: claim_reward.rs  close_player_session.rs  close_session_by_delegate.rs  commit_guess_session.rs  create_game.rs  create_game_session.rs  create_player_session.rs  initialize.rs  (+10 more)
programs/coordination/src/: errors.rs  events.rs  lib.rs  payoff.rs  zk.rs
programs/coordination/src/instructions/: claim_reward.rs  close_game.rs  commit_guess.rs  create_game.rs  create_tournament.rs  finalize_tournament.rs  initialize.rs  join_game.rs  mod.rs  resolve_timeout.rs  reveal_guess.rs
programs/coordination/src/state/: game.rs  mod.rs  player.rs  tournament.rs
programs/shared/src/: platform.rs  scoring.rs
programs/shillbot/: Cargo.toml
programs/shillbot/src/: errors.rs  events.rs  lib.rs  scoring.rs  transfers.rs
scripts/: check-upgrade-authority.sh
sdk/: coordination.ts  coordination_game.ts  package.json
tests/: coordination-game.ts  coordination.ts  shillbot-edge-cases.ts  shillbot-lifecycle.ts  shillbot.ts
tests/helpers/: mock-switchboard-feed.ts
(+26 files in other folders)
